Add first migration with entities

--- a/Contacts-List.Infrastructure/Contacts-List.Infrastructure.csproj
+++ b/Contacts-List.Infrastructure/Contacts-List.Infrastructure.csproj
@@ -5,6 +5,16 @@
     <ProjectReference Include="..\Contacts-List.Application\Contacts-List.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Contacts_List.Infrastructure</RootNamespace>
