--- a/Contacts-List.WebUI/appsettings.json
+++ b/Contacts-List.WebUI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ContactsListConnection": "Server=localhost;Initial Catalog=ContactsListDB;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
