Add new approach with contacts, and category entities

--- a/Contacts-List.WebUI/appsettings.json
+++ b/Contacts-List.WebUI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ContactsListConnection": "Server=localhost;Initial Catalog=ContactsListDB;Trusted_Connection=True;"
+    "ContactsListConnection": "Server=DESKTOP-SA0ADM1;Initial Catalog=ContactsListDB;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
