Add identity service, and indetity migrations

--- a/Contacts-List.Application/Contacts-List.Application.csproj
+++ b/Contacts-List.Application/Contacts-List.Application.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Contacts-List.Domain\Contacts-List.Domain.csproj" />
   </ItemGroup>
 
