Register new contact endpoint, and contact service

--- a/Contacts-List.WebUI/appsettings.json
+++ b/Contacts-List.WebUI/appsettings.json
@@ -8,5 +8,14 @@
   "ConnectionStrings": {
     "ContactsListConnection": "Server=DESKTOP-SA0ADM1;Initial Catalog=ContactsListDB;Trusted_Connection=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Token": {
+    "Key": "rBHewxeX$HoQ6gIcskn#N1Y#m%Ka8xKYdn@nS^a%i9^2yH92NIDq9dMxQoa09EL75!Eo&O8PkbmTApP5UDu@yT17&AD4&q9xhMr",
+    "Issuer": "http://localhost:5000"
+  },
+  "Jwt": {
+    "Key": "N!&P&DYQto6jc$A6!!9ye!1O2v5dEOhFjemN#!9Brmt$k9JmwaCDK0aO^*$Me2SVIqUr2Rtprlu",
+    "Audience": "http://localhost:5000",
+    "Issuer": "http://localhost:5000"
+  }
 }
