--- a/Contacts-List.WebUI/contacts-list-ui/package.json
+++ b/Contacts-List.WebUI/contacts-list-ui/package.json
@@ -14,6 +14,9 @@
     "@types/node": "^16.11.52",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
