--- a/Contacts-List.Infrastructure/Contacts-List.Infrastructure.csproj
+++ b/Contacts-List.Infrastructure/Contacts-List.Infrastructure.csproj
@@ -16,6 +16,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistance\Migrations\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Contacts_List.Infrastructure</RootNamespace>
